# mavgen

./: .gitignore  .gitmodules  Cargo.toml  README.md
mavgen/: Cargo.toml
mavgen-cli/: Cargo.toml  README.md
mavgen-cli/src/: main.rs
mavgen-test/: Cargo.toml  README.md  build.rs
mavgen-test/src/: lib.rs  main.rs
mavgen-test/tests/: mavtest.py  test_pymanlink.rs
mavgen/src/: flatten.rs  lib.rs  model.rs  normaliser.rs  parser.rs  xml.rs
mavgen/src/codegen/rust/: mod.rs  tests.rs
